# tempo-cli

./: .gitignore  .justfile  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  engine_version.json  index.html  mkdocs.yml  old_readme.md  pyproject.toml  readme.md  requirements.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  dev_releases.yml  github_pages.yml  lint.yml  main_releases.yml  pyright_check.yml  releases.yml  ruff_lint.yml  test.yml  test.yml.bak  test_two.yml
.zed/: debug.json
api/: index.html
assets/base/assets/preset_template/: settings.json
assets/base/scripts/: build.bat  cleanup_build.bat  cleanup_cooked.bat  cleanup_full.bat  cleanup_game.bat  cook.bat  full_run_all.bat  generate_game_file_list_json.bat  generate_mod_releases_all.bat  generate_mods_all.bat  package.bat  resave_packages_and_fix_up_redirectors.bat  resync_dir_with_repo.bat  run_engine.bat  run_game.bat  test_mods_all.bat
assets/dev_tools/linux/: cleanup_repo.sh  lint_code.sh  make_exe_release.sh  refresh_deps.sh  setup_default_virtual_environment.sh  setup_dev_virtual_environment.sh  setup_virtual_environment.sh  test_exe_release.sh  test_virtual_environment.sh  upload_latest_to_repo.sh
assets/dev_tools/windows/: cleanup_repo.bat  lint_code.bat  mkdocs_serve.bat  refresh_deps.bat  setup_default_virtual_environment.bat  setup_dev_virtual_environment.bat  setup_virtual_environment.bat  test_exe_release.bat  upload_latest_to_repo.bat
assets/examples/: example.drawio
assets/research/: research.md
assets/scripts/: add_mod.bat  build.bat  cleanup_build.bat  cleanup_cooked.bat  cleanup_full.bat  cleanup_game.bat  close_engine.bat  close_game.bat  cook.bat  disable_mod.bat  enable_mod.bat  full_run_all.bat  generate_game_file_list_json.bat  generate_mod_releases_all.bat  generate_mods_all.bat  open_latest_log.bat  package.bat  refresh_deps.bat  remove_mod.bat  resync_dir_with_repo.bat  run_engine.bat  run_game.bat  test_mods_all.bat
blog/: index.html
community/: index.html
docs/: TestingCollection.collection  _config.yml  community.md  faq.md  getting_started.md  help.md  index.md  to_do_list.md
docs/examples/: example.drawio
docs/reference/: index.md
docs/remote_theme: pages-themes/  Download using the GitHub .zip download option and unzip them. Activating theme      Add the following to your site's _config.yml:  remote_theme: "dracula/: _config.yml
docs/research/: Asset Manager Backup 2025-03-06 194240.ini
docs/stylesheets/: extra.css
docs/to_do_lists/: ci_cd.md  current_to_do_list.md  documentation.md  hot_keys.md  iostore.md  later_later.md  later_later_later.md  localization.md  main.md  settings.md  sooner_later.md  variable_config_substitution.md
docs/tutorials/workflows/: standard.md
faq/: index.html
getting_started/: index.html
help/: index.html
how_to/: index.html
projects/: index.html
reference/: index.html
reference/commands/: index.html
reference/commands/clean/: index.html
reference/commands/collection/: index.html
reference/commands/dump/: index.html
reference/commands/file_io/: index.html
reference/commands/ini/: index.html
reference/commands/init/: index.html
reference/commands/json/: index.html
reference/commands/mod/: index.html
reference/commands/run/: index.html
reference/commands/toml/: index.html
reference/commands/tool/: index.html
reference/commands/tui/: index.html
reference/commands/uplugin/: index.html
reference/commands/uproject/: index.html
reference/config/: index.html
reference/environment_variables/: index.html
requirements/: requirements-dev.txt
search/: search_index.json
setup/: index.html
src/tempo/: __main__.pyw  app_runner.py  cli.py  engine.py  file_io.py  game_runner.py  hook_states.py  initialization.py  log_info.py  logger.py  main.py  main_logic.py  packing.py  process_management.py  settings.py  unreal_collections.py  utilities.py  window_management.py  wrapper.py
src/tempo/programs/: fmodel.py  kismet_analyzer.py  repak.py  spaghetti.py  stove.py  uasset_gui.py  umodel.py  unreal_engine.py  unreal_pak.py
src/tempo/threads/: constant.py  engine_monitor.py  game_monitor.py  thread_engine_monitor.py
src/tempo_cli/: __main__.py  __main__.pyw  checks.py  cli.py  data_structures.py  file_io.py  git.py  main.py  unreal.py  validators.py
src/tempo_cli/commands/: clean.py  close.py  collection.py  dlc.py  dump.py  file_io.py  ini.py  init.py  init_command.py  json.py  list.py  mod.py  run.py  toml.py  tool.py  uplugin.py  uproject.py
src/tempo_cli/commitizen/: data_structures.py
src/tempo_cli/docs/: index.md
src/unreal_auto_mod/: __main__.py  _version.py  app_runner.py  cli.py  collections.py  configs.py  customization.py  data_structures.py  engine.py  enums.py  file_io.py  game_runner.py  gen_py_utils.py  hook_states.py  initialization.py  log.py  log_info.py  logger.py  main.py  main_logic.py  mods.py  packing.py  process_management.py  repak_utilities.py  settings.py  sig.py  thread_constant.py  thread_engine_monitor.py  thread_game_monitor.py  timer.py  ue_dev_py_utils.py  unreal.py  unreal_collections.py  unreal_engine.py  unreal_inis.py  unreal_pak.py  utilities.py  versioning.py  window_management.py  wrapper.py
src/unreal_auto_mod/programs/: epic_games_launcher.py  fmodel.py  kismet_analyzer.py  repak.py  spaghetti.py  steam.py  stove.py  uasset_gui.py  umodel.py  unreal_engine.py  unreal_pak.py
src/unreal_auto_mod/threads/: constant.py  engine_monitor.py  game_monitor.py  thread_engine_monitor.py
tests/: test_tempo_cli.py
to_do_list/: index.html
to_do_lists/configs_and_settings/: index.html
to_do_lists/documentation/: index.html
to_do_lists/hot_keys/: index.html
to_do_lists/iostore/: index.html
to_do_lists/later_later/: index.html
to_do_lists/localization/: index.html
to_do_lists/main/: index.html
to_do_lists/validation/: index.html
tutorials/: index.html
tutorials/workflows/: index.html
tutorials/workflows/on_standard/: index.html
tutorials/workflows/standard/: index.html
(+77 files in other folders)
