[project]
name = "tempo-cli"
version = "4.3.0-dev.16866984174"
description = "Unreal Engine modding tool, that covers project management, automated builds, and more"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click>=8.2.1",
    "questionary>=2.1.0",
    "rich-click>=1.8.9",
    "tempo-core",
    "tomlkit>=0.13.3",
    "trogon>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.sources]
tempo-core = { git = "https://github.com/Tempo-Organization/tempo-core" }

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "pre-commit>=4.2.0",
    "pyinstaller>=6.14.2",
    "pyright>=1.1.402",
    "ruff>=0.12.2",
]
x86-64-pc-windows-msvc = []
i686-pc-windows-msvc = []
x86-64-unknown-linux-gnu = []
aarch64-unknown-linux-gnu = []

[project.urls]
Documentation = "https://github.com/Tempo-Organization/tempo-cli/blob/main/README.md"
Issues = "https://github.com/Tempo-Organization/tempo-cli/issues"
Source = "https://github.com/Tempo-Organization/tempo-cli"

[project.scripts]
tempo_cli = "tempo_cli.__main__:main"

[tool.ruff]
exclude = [
    "src/tempo_cli/cli.py"
]

[tool.typos]
[tool.typos.default]
extend-words = { ue = "ue" }

[tool.pyright]
extraPaths = [".venv/Lib/site-packages"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
