[project]
name = "tempo-cli"
version = "5.2.0-dev.24591472908"
description = "Unreal Engine modding tool, that covers project management, automated builds, and more"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "commitizen>=4.12.0",
    "mkdocs-material>=9.7.1",
    "prek>=0.3.9",
    "questionary>=2.1.0",
    "rich-click>=1.9.4",
    "tempo-core",
    "tomlkit>=0.13.3",
    "trogon>=0.6.0",
    "ue4ss-installer-core",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.sources]
ue4ss-installer-core = { git = "https://www.github.com/Tempo-Organization/ue4ss-installer-core" }
tempo-core = { git = "https://www.github.com/Tempo-Organization/tempo-core" }

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "prek>=0.3.9",
    "pyinstaller>=6.14.2",
    "ruff>=0.12.2",
    "ty>=0.0.31",
]
x86-64-pc-windows-msvc = []
i686-pc-windows-msvc = []
x86-64-unknown-linux-gnu = []
aarch64-unknown-linux-gnu = []

[project.urls]
Documentation = "https://github.com/Tempo-Organization/tempo-cli/blob/main/README.md"
Issues = "https://github.com/Tempo-Organization/tempo-cli/issues"
Source = "https://github.com/Tempo-Organization/tempo-cli"

[project.scripts]
tempo_cli = "tempo_cli.__main__:main"

[tool.ruff]
exclude = [
    "src/tempo_cli/cli.py"
]

[tool.ruff.lint]
select = ["ANN", "PTH", "N", "BLE"]


[tool.typos]
[tool.typos.default]
extend-words = { ue = "ue" }


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
